[RePluginDemo][host&plugin1]增加宿主和插件交互的简单测试(注:宿主加载插件的fragment没有解决)

--- a/plugins/plugin1/app/build.gradle
+++ b/plugins/plugin1/app/build.gradle
@@ -29,10 +29,17 @@ repluginPluginConfig {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.1.1'
+
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     implementation 'com.qihoo360.replugin:replugin-plugin-lib:2.3.0'
+
+    /**
+     * 这个jar就是从Support-fragment中提取出来的并非特制包目的是为了骗过编译期
+     */
+    //provided files('libs/fragment.jar')
 }
+
