--- a/plugins/plugin1/app/src/main/AndroidManifest.xml
+++ b/plugins/plugin1/app/src/main/AndroidManifest.xml
@@ -31,6 +31,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".ForResultActivity" android:process=":plugin2">
+            <intent-filter>
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
