--- a/host/app/src/main/AndroidManifest.xml
+++ b/host/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".DemoFragmentActivity" android:process=":host1"/>
     </application>
 
 </manifest>
