--- a/plugins/plugin2/app/build.gradle
+++ b/plugins/plugin2/app/build.gradle
@@ -9,11 +9,24 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        externalNativeBuild {
+            cmake {
+                cppFlags ""
+                // 生成多个版本的so文件
+                abiFilters 'arm64-v8a', 'armeabi', 'armeabi-v7a'
+            }
+        }
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+    externalNativeBuild {
+        cmake {
+            path 'CMakeLists.txt'
         }
     }
 }
