[RePluginDemo][jobservice]尝试在宿主中使用jobservice，测试不通过

--- a/plugins/plugin1/app/build.gradle
+++ b/plugins/plugin1/app/build.gradle
@@ -45,7 +45,11 @@ dependencies {
     /**
      * 插件引用宿主类的方式
      */
-    compileOnly files('libs/plugin-utils-lib-1.0.0.jar')
+    if (isPlugin.toBoolean()) {
+        compileOnly files('libs/plugin-utils-lib-1.0.0.jar')
+    } else {
+        implementation files('libs/plugin-utils-lib-1.0.0.jar')
+    }
 }
 
 
