--- a/host/app/build.gradle
+++ b/host/app/build.gradle
@@ -1,11 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion rootProject.ext.android['compileSdkVersion']
+    buildToolsVersion rootProject.ext.android['buildToolsVersion']
+
     defaultConfig {
         applicationId "com.android.test.host.demo"
-        minSdkVersion 21
-        targetSdkVersion 27
+        minSdkVersion rootProject.ext.android['minSdkVersion']
+        targetSdkVersion rootProject.ext.android['targetSdkVersion']
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -84,13 +86,14 @@ repluginHostConfig {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation rootProject.ext.dependencies['appcompat-v7']
 
-    implementation 'com.qihoo360.replugin:replugin-host-lib:2.3.0'
+    testImplementation rootProject.ext.dependencies["junit"]
+
+    androidTestImplementation rootProject.ext.dependencies['espresso']
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+
+    implementation rootProject.ext.dependencies['replugin-host-lib']
 
     implementation project(path: ':plugin-utils')
 }
