--- a/plugins/plugin1/app/build.gradle
+++ b/plugins/plugin1/app/build.gradle
@@ -1,11 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion rootProject.ext.android['compileSdkVersion']
+    buildToolsVersion rootProject.ext.android['buildToolsVersion']
+
     defaultConfig {
         applicationId "com.test.android.plugin1"
-        minSdkVersion 21
-        targetSdkVersion 27
+        minSdkVersion rootProject.ext.android['minSdkVersion']
+        targetSdkVersion rootProject.ext.android['targetSdkVersion']
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -21,7 +23,7 @@ android {
     }
 
     buildTypes {
-        release {
+        debug {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.debug
@@ -45,14 +47,14 @@ repluginPluginConfig {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation rootProject.ext.dependencies['appcompat-v7']
 
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    testImplementation 'junit:junit:4.12'
+    testImplementation rootProject.ext.dependencies["junit"]
+
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation rootProject.ext.dependencies['espresso']
 
-    implementation 'com.qihoo360.replugin:replugin-plugin-lib:2.3.0'
+    implementation rootProject.ext.dependencies['replugin-plugin-lib']
 
     /**
      * 这个jar就是从Support-fragment中提取出来的并非特制包目的是为了骗过编译期
