--- a/plugins/plugin2/app/build.gradle
+++ b/plugins/plugin2/app/build.gradle
@@ -1,11 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion rootProject.ext.android['compileSdkVersion']
+    buildToolsVersion rootProject.ext.android['buildToolsVersion']
+
     defaultConfig {
         applicationId "com.test.android.plugin2"
-        minSdkVersion 21
-        targetSdkVersion 27
+        minSdkVersion rootProject.ext.android['minSdkVersion']
+        targetSdkVersion rootProject.ext.android['targetSdkVersion']
         versionCode 7008002
         versionName "7.8.2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -27,12 +29,29 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }*/
 
+    signingConfigs {
+        debug {
+            keyAlias 'plugin-key'
+            keyPassword 'android'
+            storeFile file('../../../keystore/plugin.keystore.jks')
+            storePassword 'android'
+        }
+    }
+
     buildTypes {
+        debug {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.debug
+        }
+
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.debug
         }
     }
+
     externalNativeBuild {
         cmake {
             path 'CMakeLists.txt'
@@ -50,13 +69,14 @@ repluginPluginConfig {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation rootProject.ext.dependencies['appcompat-v7']
 
-    implementation 'com.qihoo360.replugin:replugin-plugin-lib:2.3.0'
+    testImplementation rootProject.ext.dependencies["junit"]
+
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation rootProject.ext.dependencies['espresso']
+
+    implementation rootProject.ext.dependencies['replugin-plugin-lib']
 
     /**
      * 插件引用宿主类的方式
