[RePluginDemo][resource]测试读取插件中的资源

--- a/host/app/src/main/AndroidManifest.xml
+++ b/host/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".DemoFragmentActivity" android:process=":host1"/>
+        <activity android:name=".DemoResourceActivity"/>
 
         <provider
             android:name=".Plugin1FileProvider"
